Fix blurry fonts
(cherry picked from commit f1d9b044af872382a7a08dac5f7e5eb13acd4387)

--- a/packages/ui/src/theme.css
+++ b/packages/ui/src/theme.css
@@ -4,17 +4,20 @@
     white-space: pre-wrap;
 }
 
+
 .hljs-comment,
 .hljs-quote {
     color: #998;
     font-style: italic;
 }
 
+
 .hljs-keyword,
 .hljs-selector-tag,
 .hljs-subst {
-    font-weight: 700;
+    font-weight: 500;
 }
+
 
 .hljs-literal,
 .hljs-number,
@@ -24,24 +27,27 @@
     color: teal;
 }
 
+
 .hljs-doctag,
 .hljs-string {
     color: #d14;
 }
 
+
 .hljs-section,
 .hljs-selector-id,
 .hljs-title {
     color: #d73a49;
-    font-weight: 700;
+    font-weight: 500;
 }
 
 .hljs-class .hljs-title,
 .hljs-type,
 .hljs-attr {
     color: #458;
-    font-weight: 700;
+    font-weight: 500;
 }
+
 
 .hljs-attribute,
 .hljs-name,
@@ -50,45 +56,55 @@
     font-weight: 400;
 }
 
+
 .hljs-link,
 .hljs-regexp {
     color: #009926;
 }
+
 
 .hljs-bullet,
 .hljs-symbol {
     color: #990073;
 }
 
+
 .hljs-built_in,
 .hljs-builtin-name {
     color: #0086b3;
 }
 
+
 .hljs-meta {
     color: #999;
-    font-weight: 700;
+    font-weight: 500;
 }
+
 
 .hljs-deletion {
     background: #fdd;
 }
 
+
 .hljs-addition {
     background: #dfd;
 }
+
 
 .hljs-emphasis {
     font-style: italic;
 }
 
+
 .hljs-strong {
-    font-weight: 700;
+    font-weight: 500;
 }
+
 
 .hljs-trace-line {
     color: #aaa;
 }
+
 
 .hljs-trace-line .hljs-code-path {
     color: #454b52;
